Actualizando archivos de la carpeta public_html incluyendo Entrada, Salida y Portal Bancario

--- a/banco.com/public_html/index-usuario.html
+++ b/banco.com/public_html/index-usuario.html
@@ -71,10 +71,14 @@
                 <a class="nav-link" href="tarjetas.html">Tarjetas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Portal</a>
+                <a class="nav-link" href="portal.html">Portal</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index-usuario.html">Entrar</a>
+                <a class="nav-link" href="cliente.html">
+		<i class="fa fa-user"></i> Fulanito</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Salir</a>
               </li>
             </ul>
           </div>
